issue with 100vh on mobile: https://stackoverflow.com/questions/37112218/css3-100vh-not-constant-in-mobile-browser

--- a/css/app.css
+++ b/css/app.css
@@ -11,7 +11,7 @@ body {
 	width: 100%;
 	height: 100vh;
 	min-width: 350px;
-	overscroll-behavior-y: contain;
+	overscroll-behavior: none
 }
 
 h1, h2, h3, p, blockquote, pre {
@@ -136,7 +136,7 @@ pre {
 .body-container {
 	flex: 1;
 	overflow: hidden;
-	overscroll-behavior-y: contain;
+	overscroll-behavior: none
 }
 
 .home-page, .services-page, .projects-page, .contacts-page{
@@ -233,8 +233,7 @@ pre {
 		align-items: center;
 	}
 	.link-wraps{
-		border: 1px solid red;
-		padding-left: 80px;
+		padding-left: 100px;
 		transform: rotate(-90deg);
 		width: calc(100vh - 80px);
 		height: 80px;
@@ -250,6 +249,7 @@ pre {
 	.home-page, .services-page, .projects-page, .contacts-page{
 		padding-top: 0 !important;
 		padding-right: 80px !important;
+		padding-bottom: 80px;
 	}
 	.inner-home{
 		padding-right: 0 !important;
